# count_lines

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE_APACHE  README.md  portability_final_conclusion.md  portability_report.md  rustfmt.toml  snapshot.json  test_sloc.rs  typescript  usage.txt
crates/cli/: Cargo.toml
crates/cli/benches/: benchmark.rs  end_to_end.rs
crates/cli/src/: args.rs  compare.rs  config.rs  engine.rs  error.rs  filesystem.rs  lib.rs  main.rs  options.rs  parsers.rs  path_security.rs  presentation.rs  stats.rs  watch.rs
crates/cli/src/language/: mod.rs
crates/cli/src/language/processors/: assembly_style.rs  batch_style.rs  c_style.rs  fortran_processor.rs  julia_style.rs  lua_style.rs  perl_style.rs  python_style.rs  simple_prefix_style.rs
crates/cli/tests/: integration_test.rs  snapshots.rs
crates/cli/tests/fixtures/: sample.rs
crates/cli/tests/snapshots/: snapshots__help.snap  snapshots__scan_sample_json.snap
crates/core/: Cargo.toml
crates/core/src/: bootstrap.rs  config.rs  counter.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  parser.rs  stats.rs  usage.txt  version.rs
crates/core/src/app/: mod.rs
crates/core/src/application/: commands.rs  mod.rs  queries.rs
crates/core/src/application/commands/: mod.rs  ports.rs  run_analysis.rs
crates/core/src/application/commands/run_analysis/: command.rs  handler.rs
crates/core/src/application/config/: mod.rs
crates/core/src/application/config/commands/: mod.rs
crates/core/src/application/config/queries/: config_query_service.rs
crates/core/src/application/queries/config/: queries.rs
crates/core/src/domain/: analytics.rs  error.rs  grouping.rs  mod.rs  model.rs  options.rs
crates/core/src/domain/analytics/: aggregate.rs  mod.rs  sort.rs
crates/core/src/domain/compute/: mod.rs  process.rs
crates/core/src/domain/config/: filters.rs  mod.rs
crates/core/src/domain/config/aggregates/: config.rs
crates/core/src/domain/config/value_objects/: by_key.rs  filtering.rs  mod.rs
crates/core/src/domain/files/: git.rs  inputs.rs  matcher.rs  mod.rs
crates/core/src/domain/files/adapters/: inputs.rs
crates/core/src/domain/files/services/: collector.rs  metadata_loader.rs  mod.rs
crates/core/src/domain/model/: entities.rs  mod.rs  value_objects.rs
crates/core/src/domain/model/entities/: file_entry.rs  file_stats.rs
crates/core/src/domain/model/value_objects/: file_meta.rs  summary.rs
crates/core/src/domain/output/: delimited.rs  jsonl.rs  markdown.rs  mod.rs  structured.rs  table.rs  utils.rs  writer.rs
crates/core/src/domain/value_objects/: counts.rs  file_info.rs  mod.rs
crates/core/src/domain/value_objects/counts/: counts_display.rs
crates/core/src/foundation/: mod.rs
crates/core/src/foundation/types/: mod.rs
crates/core/src/foundation/util/: mod.rs
crates/core/src/infrastructure/: adapters.rs  cache.rs  comparison.rs  filesystem.rs  measurement.rs  mod.rs  persistence.rs  watch.rs
crates/core/src/infrastructure/comparison/: mod.rs  snapshot.rs
crates/core/src/infrastructure/filesystem/: adapters.rs  mod.rs
crates/core/src/infrastructure/filesystem/adapters/: git.rs  inputs.rs  matcher.rs
crates/core/src/infrastructure/filesystem/services/: collector.rs  metadata_loader.rs  mod.rs
crates/core/src/infrastructure/io/: output.rs
crates/core/src/infrastructure/io/output/: delimited.rs  formatters.rs  jsonl.rs  markdown.rs  mod.rs  (+4 more)
crates/core/src/infrastructure/measurement/: measurer.rs  mod.rs  strategies.rs
crates/core/src/infrastructure/persistence/: file_reader.rs
crates/core/src/interface/cli/: args.rs  mod.rs
crates/core/src/language/: comment_style.rs  heredoc_utils.rs  mod.rs  processor_trait.rs  string_utils.rs
crates/core/src/language/processors/: assembly_style.rs  batch_style.rs  c_style.rs  dlang_style.rs  erlang_style.rs  fortran_processor.rs  fortran_style.rs  haskell_style.rs  javascript_style.rs  julia_style.rs  lisp_style.rs  lua_style.rs  markup_style.rs  matlab_style.rs  mod.rs  ocaml_style.rs  perl_style.rs  php_style.rs  powershell_style.rs  python_style.rs  ruby_style.rs  shell_style.rs  simple_hash_style.rs  simple_prefix_style.rs  sql_style.rs  swift_style.rs  vhdl_style.rs  visual_basic_style.rs
crates/core/src/language/string_utils/: cpp.rs  mod.rs  options.rs  python.rs  rust.rs  search.rs  skip.rs  swift.rs  tests.rs
crates/core/src/presentation/: cli.rs
crates/core/src/presentation/cli/: args.rs  mod.rs  parsers.rs  value_enum.rs
crates/core/src/shared/: mod.rs  path.rs  patterns.rs
crates/core/tests/: property_tests.rs
crates/domain/: Cargo.toml
crates/domain/src/: analytics.rs  config.rs  grouping.rs  lib.rs  model.rs  options.rs
crates/domain/src/analytics/: aggregate.rs  sort.rs
crates/domain/src/config/: value_objects.rs
crates/domain/src/config/aggregates/: config.rs
crates/domain/src/config/value_objects/: by_key.rs  filtering.rs  glob_pattern.rs
crates/domain/src/model/: entities.rs
crates/domain/src/model/entities/: file_entry.rs  file_stats.rs  measurement.rs
crates/domain/src/model/value_objects/: summary.rs
crates/domain/src/value_objects/: counts.rs  file_info.rs  mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: config.rs  error.rs  filesystem.rs  lib.rs  options.rs  path_security.rs  processor.rs  stats.rs  watch.rs
crates/infra/: Cargo.toml
crates/infra/src/: cache.rs  filesystem.rs  lib.rs  measurement.rs  persistence.rs  platform.rs  watch.rs
crates/infra/src/measurement/: measurer.rs  strategies.rs
crates/infra/src/measurement/strategies/: byte_based.rs  line_based.rs  sloc_counter.rs
crates/infra/src/persistence/: file_reader.rs  file_writer.rs
crates/shared-kernel/: Cargo.toml
crates/shared-kernel/src/: error.rs  lib.rs  path.rs
crates/shared-kernel/src/value_objects/: counts.rs  file_info.rs  file_meta.rs  mod.rs
crates/shared-kernel/tests/: counts_eq.rs  counts_saturating.rs  counts_sum.rs  counts_zero_trait.rs  error_context.rs  filesize_display.rs  filesize_huge.rs  filesize_human.rs  serde_roundtrip.rs
(+224 files in other folders)
