[package]
name = "count_lines"
version = "0.9.0"
edition = "2024"
description = "ファイル行数/文字数/単語数の集計ツール (拡張版)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jungamer-64/count_lines"
readme = "README.md"
keywords = ["count", "lines", "statistics", "files", "metrics"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = ["."]


[workspace.package]
version = "0.9.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jungamer-64/count_lines"

[workspace.dependencies]

assert_cmd = "2"
bytecount = "0.6"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
globset = "0.4"
notify = "6.1"
num_cpus = "1.17"
predicates = "3"
rayon = "1.11"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2.0.17"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tempfile = "3"

[dependencies]
bytecount = { workspace = true }
clap = { workspace = true }
ignore = { workspace = true }
notify = { workspace = true }
num_cpus = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

unicode-segmentation = "1.12.0"
crossbeam-channel = "0.5.15"
serde_yaml = { workspace = true }
comfy-table = "7.2.1"
terminal_size = "0.4.3"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
proptest = "1.9.0"
criterion = "0.7.0"

[profile.release]
strip = true
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[[bench]]
name = "end_to_end"
harness = false
