[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jungamer-64/count_lines"

[workspace.dependencies]
assert_cmd = "2"
bytecount = "0.6"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
globset = "0.4"
notify = "8.2.0"
num_cpus = "1.17"
predicates = "3"
rayon = "1.11"
# regex 1.0 supports no_std via default-features=false + alloc feature (implicit in 1.9+?)
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2.0.17"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tempfile = "3"

[profile.release]
strip = true
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
