[package]
name = "count_lines_infra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Infrastructure adapters for count_lines (filesystem, persistence, etc.)"

[dependencies]
count_lines_shared_kernel.workspace = true
count_lines_ports.workspace = true
count_lines_domain.workspace = true
chrono.workspace = true
globset.workspace = true
ignore.workspace = true
memchr = "2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
evalexpr = { workspace = true, optional = true }
bytecount.workspace = true
fs2.workspace = true
thiserror.workspace = true
xxhash-rust = { workspace = true, optional = true }
ahash = { version = "0.8", optional = true }

[features]
default = []
parallel = ["dep:rayon"]
yaml = ["dep:serde_yaml", "count_lines_shared_kernel/yaml"]
eval = ["dep:evalexpr", "count_lines_shared_kernel/eval", "count_lines_domain/eval"]
watch = ["dep:notify"]
hash-xx = ["dep:xxhash-rust"]
hash-a = ["dep:ahash"]

[dev-dependencies]
tempfile.workspace = true
